--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "play-jest",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {},
-  "devDependencies": {
-  }
+  "name": "halo",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test:coverage": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JaneZhang2/halo.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JaneZhang2/halo/issues"
+  },
+  "homepage": "https://github.com/JaneZhang2/halo#readme"
 }
