--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,6 @@ jobs:
 
       # - run: yarn test:coverage
 
-      - deploy:
-          name: Deploy Over SSH
-          command: rsync -e "ssh -o StrictHostKeyChecking=no" -arvc --exclude .git ~/beta/ myuser@mysite.org:~/domains/mysite.org/html/beta
+      # - deploy:
+      #     name: Deploy Over SSH
+      #     command: rsync -e "ssh -o StrictHostKeyChecking=no" -arvc --exclude .git ~/beta/ myuser@mysite.org:~/domains/mysite.org/html/beta
