修改部署脚本

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,4 +40,7 @@ jobs:
 
       - deploy: 
           name: Deploy Over SSH
-          command: scp ../halo.html root@111.229.47.26:/root/werobot
+          command: rsync ../halo.html 111.229.47.26:/root/werobot
+            
+            
+            #scp ../halo.html root@111.229.47.26:/root/werobot
